Mobile spacing fixes for Questions/Solutions

--- a/src/components/Questions/Questions.module.css
+++ b/src/components/Questions/Questions.module.css
@@ -14,6 +14,7 @@
 }
 .questions-body {
   font-size: 2rem;
+  padding: 0 1rem;
 }
 
 .secondary-title {
