--- a/src/components/Solutions/Solutions.module.css
+++ b/src/components/Solutions/Solutions.module.css
@@ -32,7 +32,7 @@
   width: 115px;
   height: 115px;
   border: 5px solid var(--background);
-  margin-right: 3rem;
+  margin-right: 1rem;
 }
 
 .solutions-list img {
